<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkillsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Skills"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sk_konten"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/kontentext"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_skills"
                app:layout_constraintTop_toBottomOf="@+id/tv_skills" />

            <TextView
                android:id="@+id/tv_skills_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"

                android:lineSpacingExtra="4sp"
                android:text="@string/skillsset"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_sk_konten"
                app:layout_constraintTop_toBottomOf="@+id/tv_sk_konten" />

            <TextView
                android:id="@+id/tv_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Interest"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_skills_list"
                app:layout_constraintTop_toBottomOf="@+id/tv_skills_list" />

            <TextView
                android:id="@+id/tv_inter_konten"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/kontentext"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_interest"
                app:layout_constraintTop_toBottomOf="@+id/tv_interest" />

            <TextView
                android:id="@+id/tv_inter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="4dp"
                android:text="@string/interset"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_inter_konten"
                app:layout_constraintTop_toBottomOf="@+id/tv_inter_konten" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>